Refactored origin layers * Now uses serializable data to for serialization/deserialization * Tidied up the code for origin layers * If specified, missing names and descriptions are now used when rendering the name and description of the missing origin