@@ -1,35 +1,54 @@
 package io.github.apace100.origins.origin;
 
-import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
-import com.google.gson.JsonParseException;
 import io.github.apace100.apoli.data.ApoliDataTypes;
 import io.github.apace100.apoli.power.factory.condition.ConditionFactory;
 import io.github.apace100.calio.data.SerializableData;
 import io.github.apace100.calio.data.SerializableDataTypes;
 import io.github.apace100.origins.data.OriginsDataTypes;
-import net.fabricmc.api.EnvType;
-import net.fabricmc.api.Environment;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.network.PacketByteBuf;
 import net.minecraft.text.Text;
 import net.minecraft.util.Identifier;
-import net.minecraft.util.JsonHelper;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
+import java.util.function.Predicate;
 
+@SuppressWarnings("unused")
 public class OriginLayer implements Comparable<OriginLayer> {
 
+    public static final SerializableData DATA = new SerializableData()
+        .add("order", SerializableDataTypes.INT, OriginLayers.size())
+        .add("loading_priority", SerializableDataTypes.INT, 0)
+        .add("origins", OriginsDataTypes.ORIGINS_OR_CONDITIONED_ORIGINS)
+        .add("replace", SerializableDataTypes.BOOLEAN, false)
+        .add("enabled", SerializableDataTypes.BOOLEAN, true)
+        .add("name", SerializableDataTypes.TEXT, null)
+        .add("gui_title", OriginsDataTypes.GUI_TITLE, null)
+        .add("missing_name", SerializableDataTypes.TEXT, null)
+        .add("missing_description", SerializableDataTypes.TEXT, null)
+        .add("allow_random", SerializableDataTypes.BOOLEAN, false)
+        .add("allow_random_unchoosable", SerializableDataTypes.BOOLEAN, false)
+        .add("exclude_random", SerializableDataTypes.IDENTIFIERS, new LinkedList<>())
+        .add("replace_exclude_random", SerializableDataTypes.BOOLEAN, false)
+        .add("default_origin", SerializableDataTypes.IDENTIFIER, null)
+        .add("auto_choose", SerializableDataTypes.BOOLEAN, false)
+        .add("hidden", SerializableDataTypes.BOOLEAN, false);
+
     private int order;
-    private Identifier identifier;
-    private List<ConditionedOrigin> conditionedOrigins;
+    private int loadingPriority;
+
     private boolean enabled = false;
+
+    protected Identifier id;
+
+    private List<ConditionedOrigin> conditionedOrigins;
+    private boolean replaceConditionedOrigins;
 
     private String nameTranslationKey;
     private String titleViewOriginTranslationKey;
@@ -37,66 +56,122 @@ public class OriginLayer implements Comparable<OriginLayer> {
     private String missingOriginNameTranslationKey;
     private String missingOriginDescriptionTranslationKey;
 
+    private Text name;
+    private Text missingName;
+    private Text missingDescription;
+
+    private GuiTitle guiTitle;
+
     private boolean isRandomAllowed = false;
     private boolean doesRandomAllowUnchoosable = false;
     private List<Identifier> originsExcludedFromRandom = null;
+    private boolean replaceOriginsExcludedFromRandom;
 
     private Identifier defaultOrigin = null;
     private boolean autoChooseIfNoChoice = false;
 
     private boolean hidden = false;
-    private boolean overrideViewOriginTitle = false;
-    private boolean overrideChooseOriginTitle = false;
+
+    public int getOrder() {
+        return order;
+    }
+
+    public int getLoadingPriority() {
+        return loadingPriority;
+    }
 
     public String getOrCreateTranslationKey() {
+
         if(nameTranslationKey == null || nameTranslationKey.isEmpty()) {
-            this.nameTranslationKey = "layer." + identifier.getNamespace() + "." + identifier.getPath() + ".name";
+            this.nameTranslationKey = "layer." + id.getNamespace() + "." + id.getPath() + ".name";
         }
+
         return nameTranslationKey;
+
     }
 
     public String getTranslationKey() {
         return getOrCreateTranslationKey();
     }
 
+    public Text getName() {
+        return name != null ? name : Text.translatable(getTranslationKey());
+    }
+
+    public Text getMissingName() {
+        return missingName != null ? missingName : Text.translatable(getMissingOriginNameTranslationKey());
+    }
+
     public String getMissingOriginNameTranslationKey() {
-        if(missingOriginNameTranslationKey == null || missingOriginNameTranslationKey.isEmpty()) {
-            this.missingOriginNameTranslationKey = "layer." + identifier.getNamespace() + "." + identifier.getPath() + ".missing_origin.name";
+
+        if (missingOriginNameTranslationKey == null || missingOriginNameTranslationKey.isEmpty()) {
+            this.missingOriginNameTranslationKey = "layer." + id.getNamespace() + "." + id.getPath() + ".missing_origin.name";
         }
+
         return missingOriginNameTranslationKey;
+
     }
 
-    public String getTitleViewOriginTranslationKey() {
-        if(titleViewOriginTranslationKey == null || titleViewOriginTranslationKey.isEmpty()) {
-            this.titleViewOriginTranslationKey = "layer." + identifier.getNamespace() + "." + identifier.getPath() + ".view_origin.name";
-        }
-        return titleViewOriginTranslationKey;
-    }
-
-    public boolean shouldOverrideViewOriginTitle() {
-        return overrideViewOriginTitle;
-    }
-
-    public String getTitleChooseOriginTranslationKey() {
-        if(titleChooseOriginTranslationKey == null || titleChooseOriginTranslationKey.isEmpty()) {
-            this.titleChooseOriginTranslationKey = "layer." + identifier.getNamespace() + "." + identifier.getPath() + ".choose_origin.name";
-        }
-        return titleChooseOriginTranslationKey;
-    }
-
-    public boolean shouldOverrideChooseOriginTitle() {
-        return overrideChooseOriginTitle;
+    public Text getMissingDescription() {
+        return missingDescription != null ? missingDescription : Text.translatable(getMissingOriginDescriptionTranslationKey());
     }
 
     public String getMissingOriginDescriptionTranslationKey() {
-        if(missingOriginDescriptionTranslationKey == null || missingOriginDescriptionTranslationKey.isEmpty()) {
-            this.missingOriginDescriptionTranslationKey = "layer." + identifier.getNamespace() + "." + identifier.getPath() + ".missing_origin.description";
+
+        if (missingOriginDescriptionTranslationKey == null || missingOriginDescriptionTranslationKey.isEmpty()) {
+            this.missingOriginDescriptionTranslationKey = "layer." + id.getNamespace() + "." + id.getPath() + ".missing_origin.description";
         }
+
         return missingOriginDescriptionTranslationKey;
+
+    }
+
+    public Text getViewOriginTitle() {
+        return guiTitle != null && guiTitle.viewOrigin != null ? guiTitle.viewOrigin : Text.translatable(getTitleViewOriginTranslationKey());
+    }
+
+    public String getTitleViewOriginTranslationKey() {
+
+        if (titleViewOriginTranslationKey == null || titleViewOriginTranslationKey.isEmpty()) {
+            this.titleViewOriginTranslationKey = "layer." + id.getNamespace() + "." + id.getPath() + ".view_origin.name";
+        }
+
+        return titleViewOriginTranslationKey;
+
+    }
+
+    public boolean shouldOverrideViewOriginTitle() {
+        return guiTitle != null;
+    }
+
+    public Text getChooseOriginTitle() {
+        return guiTitle != null && guiTitle.chooseOrigin != null ? guiTitle.chooseOrigin : Text.translatable(getTitleChooseOriginTranslationKey());
+    }
+
+    public String getTitleChooseOriginTranslationKey() {
+
+        if (titleChooseOriginTranslationKey == null || titleChooseOriginTranslationKey.isEmpty()) {
+            this.titleChooseOriginTranslationKey = "layer." + id.getNamespace() + "." + id.getPath() + ".choose_origin.name";
+        }
+
+        return titleChooseOriginTranslationKey;
+
+    }
+
+    public boolean shouldOverrideChooseOriginTitle() {
+        return guiTitle != null;
+    }
+
+    public boolean shouldReplaceConditionedOrigins() {
+        return replaceConditionedOrigins;
+    }
+
+    public boolean shouldReplaceExcludedOriginsFromRandom() {
+        return replaceOriginsExcludedFromRandom;
     }
 
     public Identifier getIdentifier() {
-        return identifier;
+        return id;
     }
 
     public boolean isEnabled() {
@@ -116,19 +191,32 @@ public class OriginLayer implements Comparable<OriginLayer> {
     }
 
     public List<Identifier> getOrigins() {
-        return conditionedOrigins.stream().flatMap(co -> co.origins().stream()).filter(OriginRegistry::contains).collect(Collectors.toList());
+        return getOrigins(null);
     }
 
-    public List<Identifier> getOrigins(PlayerEntity playerEntity) {
-        return conditionedOrigins.stream().filter(co -> co.isConditionFulfilled(playerEntity)).flatMap(co -> co.origins().stream()).filter(OriginRegistry::contains).collect(Collectors.toList());
+    public List<Identifier> getOrigins(@Nullable PlayerEntity playerEntity) {
+        return conditionedOrigins
+            .stream()
+            .filter(co -> playerEntity == null || co.isConditionFulfilled(playerEntity))
+            .flatMap(co -> co.origins.stream())
+            .filter(OriginRegistry::contains)
+            .toList();
     }
 
     public int getOriginOptionCount(PlayerEntity playerEntity) {
-        long choosableOrigins = getOrigins(playerEntity).stream().map(OriginRegistry::get).filter(Origin::isChoosable).count();
-        if(isRandomAllowed && getRandomOrigins(playerEntity).size() > 0) {
+
+        int choosableOrigins = (int) getOrigins(playerEntity)
+            .stream()
+            .map(OriginRegistry::get)
+            .filter(Origin::isChoosable)
+            .count();
+
+        if (isRandomAllowed && !getRandomOrigins(playerEntity).isEmpty()) {
             choosableOrigins++;
         }
-        return (int)choosableOrigins;
+
+        return choosableOrigins;
+
     }
 
     public boolean contains(Identifier originId) {
@@ -163,79 +251,125 @@ public class OriginLayer implements Comparable<OriginLayer> {
     }
 
     public List<Identifier> getRandomOrigins(PlayerEntity playerEntity) {
-        return conditionedOrigins.stream().filter(co -> co.isConditionFulfilled(playerEntity)).flatMap(co -> co.origins().stream()).filter(OriginRegistry::contains).filter(o -> !originsExcludedFromRandom.contains(o)).filter(id -> doesRandomAllowUnchoosable || OriginRegistry.get(id).isChoosable()).collect(Collectors.toList());
+        return conditionedOrigins
+            .stream()
+            .filter(co -> co.isConditionFulfilled(playerEntity))
+            .flatMap(co -> co.origins.stream())
+            .filter(OriginRegistry::contains)
+            .filter(oId -> !originsExcludedFromRandom.contains(oId))
+            .filter(oid -> doesRandomAllowUnchoosable || OriginRegistry.get(oid).isChoosable())
+            .toList();
+    }
+
+    public SerializableData.Instance toData() {
+
+        SerializableData.Instance data = DATA.new Instance();
+
+        data.set("order", order);
+        data.set("loading_priority", loadingPriority);
+        data.set("origins", conditionedOrigins);
+        data.set("replace", replaceConditionedOrigins);
+        data.set("enabled", enabled);
+        data.set("name", name);
+        data.set("gui_title", guiTitle);
+        data.set("missing_name", missingName);
+        data.set("missing_description", missingDescription);
+        data.set("allow_random", isRandomAllowed);
+        data.set("allow_random_unchoosable", doesRandomAllowUnchoosable);
+        data.set("exclude_random", originsExcludedFromRandom);
+        data.set("replace_exclude_random", replaceOriginsExcludedFromRandom);
+        data.set("default_origin", defaultOrigin);
+        data.set("auto_choose", autoChooseIfNoChoice);
+        data.set("hidden", hidden);
+
+        return data;
+
+    }
+
+    public static OriginLayer fromData(SerializableData.Instance data) {
+
+        OriginLayer layer = new OriginLayer();
+
+        layer.order = data.get("order");
+        layer.loadingPriority = data.get("loading_priority");
+        layer.conditionedOrigins = data.get("origins");
+        layer.replaceConditionedOrigins = data.get("replace");
+        layer.enabled = data.get("enabled");
+        layer.name = data.get("name");
+        layer.guiTitle = data.get("gui_title");
+        layer.missingName = data.get("missing_name");
+        layer.missingDescription = data.get("missing_description");
+        layer.isRandomAllowed = data.get("allow_random");
+        layer.doesRandomAllowUnchoosable = data.get("allow_random_unchoosable");
+        layer.originsExcludedFromRandom = data.get("exclude_random");
+        layer.replaceOriginsExcludedFromRandom = data.get("replace_exclude_random");
+        layer.defaultOrigin = data.get("default_origin");
+        layer.autoChooseIfNoChoice = data.get("auto_choose");
+        layer.hidden = data.get("hidden");
+
+        return layer;
+
     }
 
     public void merge(JsonObject json) {
-        if(json.has("order")) {
-            this.order = json.get("order").getAsInt();
+        merge(fromData(DATA.read(json)));
+    }
+
+    public void merge(OriginLayer otherLayer) {
+
+        this.order = otherLayer.order;
+        this.enabled = otherLayer.enabled;
+
+        if (otherLayer.shouldReplaceConditionedOrigins()) {
+            this.conditionedOrigins.clear();
         }
-        if(json.has("enabled")) {
-            this.enabled = json.get("enabled").getAsBoolean();
+
+        otherLayer.conditionedOrigins
+            .stream()
+            .filter(Predicate.not(this.conditionedOrigins::contains))
+            .forEach(this.conditionedOrigins::add);
+
+        this.name = otherLayer.name;
+        this.guiTitle = otherLayer.guiTitle;
+        this.missingName = otherLayer.missingName;
+        this.missingDescription = otherLayer.missingDescription;
+        this.isRandomAllowed = otherLayer.isRandomAllowed;
+        this.doesRandomAllowUnchoosable = otherLayer.doesRandomAllowUnchoosable;
+
+        if (otherLayer.shouldReplaceExcludedOriginsFromRandom()) {
+            this.originsExcludedFromRandom.clear();
         }
-        if(json.has("origins")) {
-            JsonArray originArray = json.getAsJsonArray("origins");
-            originArray.forEach(je -> this.conditionedOrigins.add(ConditionedOrigin.read(je)));
-        }
-        if(json.has("name")) {
-            this.nameTranslationKey = JsonHelper.getString(json, "name", "");
-        }
-        if(json.has("gui_title")) {
-            JsonObject guiTitleObj = json.getAsJsonObject("gui_title");
-            if(guiTitleObj.has("view_origin")) {
-                this.titleViewOriginTranslationKey = JsonHelper.getString(guiTitleObj, "view_origin", "");
-                this.overrideViewOriginTitle = true;
-            }
-            if(guiTitleObj.has("choose_origin")) {
-                this.titleChooseOriginTranslationKey = JsonHelper.getString(guiTitleObj, "choose_origin", "");
-                this.overrideChooseOriginTitle = true;
-            }
-        }
-        if(json.has("missing_name")) {
-            this.missingOriginNameTranslationKey = JsonHelper.getString(json, "missing_name", "");
-        }
-        if(json.has("missing_description")) {
-            this.missingOriginDescriptionTranslationKey = JsonHelper.getString(json, "missing_description", "");
-        }
-        if(json.has("allow_random")) {
-            this.isRandomAllowed = JsonHelper.getBoolean(json, "allow_random");
-        }
-        if(json.has("allow_random_unchoosable")) {
-            this.doesRandomAllowUnchoosable = JsonHelper.getBoolean(json, "allow_random_unchoosable");
-        }
-        if(json.has("exclude_random") && json.get("exclude_random").isJsonArray()) {
-            boolean replaceExclude = JsonHelper.getBoolean(json, "replace_exclude_random", false);
-            if(replaceExclude) {
-                originsExcludedFromRandom.clear();
-            }
-            JsonArray excludeRandomArray = json.getAsJsonArray("exclude_random");
-            excludeRandomArray.forEach(je -> originsExcludedFromRandom.add(Identifier.tryParse(je.getAsString())));
-        }
-        if(json.has("default_origin")) {
-            this.defaultOrigin = new Identifier(JsonHelper.getString(json, "default_origin"));
-        }
-        if(json.has("auto_choose")) {
-            this.autoChooseIfNoChoice = JsonHelper.getBoolean(json, "auto_choose");
-        }
-        if(json.has("hidden")) {
-            this.hidden = JsonHelper.getBoolean(json, "hidden");
-        }
+
+        otherLayer.originsExcludedFromRandom
+            .stream()
+            .filter(Predicate.not(this.originsExcludedFromRandom::contains))
+            .forEach(this.originsExcludedFromRandom::add);
+
+        this.defaultOrigin = otherLayer.defaultOrigin;
+        this.autoChooseIfNoChoice = otherLayer.autoChooseIfNoChoice;
+        this.hidden = otherLayer.hidden;
+
     }
 
     @Override
     public int hashCode() {
-        return identifier.hashCode();
+        return Objects.hash(id, conditionedOrigins);
     }
 
     @Override
     public boolean equals(Object obj) {
-        if(obj == this) {
+
+        if (this == obj) {
             return true;
-        } else if(!(obj instanceof OriginLayer)) {
-            return false;
-        } else {
-            return identifier.equals(((OriginLayer)obj).identifier);
         }
+
+        if (!(obj instanceof OriginLayer other)) {
+            return false;
+        }
+
+        return conditionedOrigins.equals(other.conditionedOrigins)
+            || ((this.id == null || other.id == null) || this.id.equals(other.id));
+
     }
 
     @Override
@@ -244,108 +378,20 @@ public class OriginLayer implements Comparable<OriginLayer> {
     }
 
     public void write(PacketByteBuf buffer) {
-        buffer.writeString(identifier.toString());
-        buffer.writeInt(order);
-        buffer.writeBoolean(enabled);
-        buffer.writeInt(conditionedOrigins.size());
-        conditionedOrigins.forEach(co -> co.write(buffer));
-        buffer.writeString(getOrCreateTranslationKey());
-        buffer.writeString(getTitleViewOriginTranslationKey());
-        buffer.writeString(getTitleChooseOriginTranslationKey());
-        buffer.writeString(getMissingOriginNameTranslationKey());
-        buffer.writeString(getMissingOriginDescriptionTranslationKey());
-        buffer.writeBoolean(isRandomAllowed());
-        if(isRandomAllowed()) {
-            buffer.writeBoolean(doesRandomAllowUnchoosable);
-            buffer.writeInt(originsExcludedFromRandom.size());
-            originsExcludedFromRandom.forEach(buffer::writeIdentifier);
-        }
-        buffer.writeBoolean(hasDefaultOrigin());
-        if(hasDefaultOrigin()) {
-            buffer.writeIdentifier(defaultOrigin);
-        }
-        buffer.writeBoolean(autoChooseIfNoChoice);
-        buffer.writeBoolean(hidden);
-        buffer.writeBoolean(overrideViewOriginTitle);
-        buffer.writeBoolean(overrideChooseOriginTitle);
+        DATA.write(buffer, toData());
     }
 
-    @Environment(EnvType.CLIENT)
     public static OriginLayer read(PacketByteBuf buffer) {
-        OriginLayer layer = new OriginLayer();
-        layer.identifier = Identifier.tryParse(buffer.readString());
-        layer.order = buffer.readInt();
-        layer.enabled = buffer.readBoolean();
-        int conditionedOriginCount = buffer.readInt();
-        layer.conditionedOrigins = new ArrayList<>(conditionedOriginCount);
-        for(int i = 0; i < conditionedOriginCount; i++) {
-            layer.conditionedOrigins.add(ConditionedOrigin.read(buffer));
-        }
-        layer.nameTranslationKey = buffer.readString();
-        layer.titleViewOriginTranslationKey = buffer.readString();
-        layer.titleChooseOriginTranslationKey = buffer.readString();
-        layer.missingOriginNameTranslationKey = buffer.readString();
-        layer.missingOriginDescriptionTranslationKey = buffer.readString();
-        layer.isRandomAllowed = buffer.readBoolean();
-        if(layer.isRandomAllowed) {
-            layer.doesRandomAllowUnchoosable = buffer.readBoolean();
-            int excludedSize = buffer.readInt();
-            layer.originsExcludedFromRandom = new LinkedList<>();
-            for(int i = 0; i < excludedSize; i++) {
-                layer.originsExcludedFromRandom.add(buffer.readIdentifier());
-            }
-        }
-        if(buffer.readBoolean()) {
-            layer.defaultOrigin = buffer.readIdentifier();
-        }
-        layer.autoChooseIfNoChoice = buffer.readBoolean();
-        layer.hidden = buffer.readBoolean();
-        layer.overrideViewOriginTitle = buffer.readBoolean();
-        layer.overrideChooseOriginTitle = buffer.readBoolean();
-        return layer;
+        return fromData(DATA.read(buffer));
     }
 
     public static OriginLayer fromJson(Identifier id, JsonObject json) {
-        int order = JsonHelper.getInt(json, "order", OriginLayers.size());
-        if(!json.has("origins") || !json.get("origins").isJsonArray()) {
-            throw new JsonParseException("Origin layer JSON requires \"origins\" array of origin IDs to include in the layer.");
-        }
-        JsonArray originArray = json.getAsJsonArray("origins");
-        List<ConditionedOrigin> list = new ArrayList<>(originArray.size());
-        originArray.forEach(je -> list.add(ConditionedOrigin.read(je)));
-        boolean enabled = JsonHelper.getBoolean(json, "enabled", true);
-        OriginLayer layer = new OriginLayer();
-        layer.order = order;
-        layer.conditionedOrigins = list;
-        layer.enabled = enabled;
-        layer.identifier = id;
-        layer.nameTranslationKey = JsonHelper.getString(json, "name", "");
-        if(json.has("gui_title") && json.get("gui_title").isJsonObject()) {
-            JsonObject guiTitleObj = json.getAsJsonObject("gui_title");
-            if(guiTitleObj.has("view_origin")) {
-                layer.titleViewOriginTranslationKey = JsonHelper.getString(guiTitleObj, "view_origin", "");
-                layer.overrideViewOriginTitle = true;
-            }
-            if(guiTitleObj.has("choose_origin")) {
-                layer.titleChooseOriginTranslationKey = JsonHelper.getString(guiTitleObj, "choose_origin", "");
-                layer.overrideChooseOriginTitle = true;
-            }
-        }
-        layer.missingOriginNameTranslationKey = JsonHelper.getString(json, "missing_name", "");
-        layer.missingOriginDescriptionTranslationKey = JsonHelper.getString(json, "missing_description", "");
-        layer.isRandomAllowed = JsonHelper.getBoolean(json, "allow_random", false);
-        layer.doesRandomAllowUnchoosable = JsonHelper.getBoolean(json, "allow_random_unchoosable", false);
-        layer.originsExcludedFromRandom = new LinkedList<>();
-        if(json.has("exclude_random") && json.get("exclude_random").isJsonArray()) {
-            JsonArray excludeRandomArray = json.getAsJsonArray("exclude_random");
-            excludeRandomArray.forEach(je -> layer.originsExcludedFromRandom.add(Identifier.tryParse(je.getAsString())));
-        }
-        if(json.has("default_origin")) {
-            layer.defaultOrigin = new Identifier(JsonHelper.getString(json, "default_origin"));
-        }
-        layer.autoChooseIfNoChoice = JsonHelper.getBoolean(json, "auto_choose", false);
-        layer.hidden = JsonHelper.getBoolean(json, "hidden", false);
+
+        OriginLayer layer = fromData(DATA.read(json));
+        layer.id = id;
+
         return layer;
+
     }
 
     public record GuiTitle(@Nullable Text viewOrigin, @Nullable Text chooseOrigin) {
